Fix overflow lines in some blog content making mobile horizontally scroll.

--- a/themes/ra-theme/assets/css/mixins.scss
+++ b/themes/ra-theme/assets/css/mixins.scss
@@ -24,6 +24,7 @@
   margin: 0 auto;
   max-width: $max-width;
   padding: $padding;
+  overflow-x: hidden;
 }
 
 @mixin all-headings {
